--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -26,7 +26,7 @@
         <li><a href="{{ author.departmentpage }}">  Department Page</a></li>
       {% endif %}      
       {% if author.philpapers %}
-        <li><a href="{{ author.philpapers }}">  Philpeople Profile</a></li>
+        <li><a href="{{ author.philpapers }}">  Philpeople</a></li>
       {% endif %}
       {% if author.location %}
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}</li>
