--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,10 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+{% if site.google_verify %}
+    <meta name="google-site-verification" content="_lloI1vVpCMj2yVnrpr3tCmJlJ22R_-jQxCQFQAMiGs">
+{% endif %}
+
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
