--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@ layout: compress
     {% include head.html %}
     {% include head/custom.html %}
     {% seo %}
+    <meta name="google-site-verification" content="_lloI1vVpCMj2yVnrpr3tCmJlJ22R_-jQxCQFQAMiGs">
   </head>
 
   <body>
